modified expression pattern

--- a/templates/index.html
+++ b/templates/index.html
@@ -648,9 +648,9 @@
                 expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
                 expressionGroup.append('能力')
                 expressionGroup.append('<div class="dropdown"><button class="styled-button dropdown-toggle" type="button" data-toggle="dropdown">强于</button><div class="dropdown-menu"><a class="dropdown-item" href="#">强于</a><a class="dropdown-item" href="#">弱于</a><a class="dropdown-item" href="#">接近</a></div></div>');
-                expressionGroup.append('当前指令的')
+                expressionGroup.append('当前指令的要求')
                 expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
-                expressionGroup.append('能力要求')
+                expressionGroup.append('能力')
             }
             else if(option === "option3") {
                 var feasibility = $('#feasibility-text').text();
