--- a/templates/index_1v1.html
+++ b/templates/index_1v1.html
@@ -1,12 +1,13 @@
 <!-- Question Introduction -->
-<div class="mt-3 mb-3">
+<div class="mt-3 mb-3" id="question-intro">
     <h4 id="question-text">一个AI助手<u><span id="feasibility-text" class="example">{% if question_set["example_feasibility"] %}能够稳定{% else %}不能正确{% endif %}</span></u>响应如下指令<br/>"<span id="example-instance" class="example">{{question_set["example_instance"]}}</span>"，<br/>请评价你因为这个实例对该AI助手响应如下指令的信任度变化和其中原因</h4>
+    <button type="button" class="btn btn-primary btn-block" id="start-btn">我已了解</button>
 </div>
 
 <!-- Options -->
 <!-- ... -->
 <!-- Options -->
-<div class="card mb-3">
+<div class="card mb-3 hide" id="question-content">
     <div class="card-body">
         <h5 class="card-title example" id="instance">{{question_set["instance"]}}</h5>
         <!-- Statements -->
@@ -42,38 +43,6 @@
                 <label class="form-check-label" for="belief7">7(非常乐观)</label>
             </div>
         </div>
-        <!-- Change in Belief Rating -->
-        <div class="belief-change-rating mt-3">
-            <p class="mb-1">样例的存在对你的判断产生了怎样的影响:</p>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange1" value="1">
-                <label class="form-check-label" for="beliefChange1">1(非常负向)</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange2" value="2">
-                <label class="form-check-label" for="beliefChange2">2</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange3" value="3">
-                <label class="form-check-label" for="beliefChange3">3</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange4" value="4">
-                <label class="form-check-label" for="beliefChange4">4(中性)</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange5" value="5">
-                <label class="form-check-label" for="beliefChange5">5</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange6" value="6">
-                <label class="form-check-label" for="beliefChange6">6</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="beliefChangeRating" id="beliefChange7" value="7">
-                <label class="form-check-label" for="beliefChange7">7(非常正向)</label>
-            </div>
-        </div>
     </br>
         <div class="statements" id="statements">
             <!-- Initial statement -->
@@ -81,11 +50,10 @@
                 <!-- Option selection -->
                 <div class="col-md-3">
                     <select class="form-control option-select">
-                        <option value="custom">自定义描述</option>
-                        <option value="option1">同能力比较</option>
-                        <option value="option2">不同能力比较</option>
-                        <option value="option3">能力错配</option>
-                        <option value="option4">能力范畴比较</option>
+                        <option value="custom">自定义描述</option>\
+                        <option value="option1">相同能力</option>\
+                        <option value="option2">不同能力</option>\
+                        <option value="option3">异质能力</option>\
                     </select>
                 </div>
                 <!-- Expression -->
@@ -103,11 +71,12 @@
         <!-- Add Statement Button -->
         <button type="button" class="btn btn-secondary add-statement mt-3" data-statements="statements"><i class="fas fa-plus"></i></button>
     </div>
+    <!-- Next Button -->
+    <button type="button" class="btn btn-primary btn-block" id="next-button">Next</button>
 </div>                                              
 <!-- ... -->
 
-<!-- Next Button -->
-<button type="button" class="btn btn-primary btn-block" id="next-button">Next</button>
+
 
 <script>
     // Variable to hold currently selected input field
@@ -181,12 +150,6 @@
             valid_flag = false;
             return;
         }
-        // get the current belief change rating
-        var belief_change_rating = $("input[name='beliefChangeRating']:checked").val();
-        if(belief_change_rating == undefined){
-            valid_flag = false;
-            return;
-        }
         // get the current statements
         var statements = [];
         $('#statements').children().each(function(){
@@ -220,11 +183,11 @@
             url: '/save_current_selection',
             type: 'POST',
             data: JSON.stringify({
+                'type':'1v1',
                 'example_instance': example_instance,
                 'example_feasibility': example_feasibility,
                 'instance': current_instance,
                 'belief_rating': belief_rating,
-                'belief_change_rating': belief_change_rating,
                 'statements': statements
             }),
             contentType: 'application/json; charset=utf-8',
@@ -239,17 +202,15 @@
     function clear_current_input(){
         // clear the current input
         $("input[name='beliefRating']").prop('checked', false);
-        $("input[name='beliefChangeRating']").prop('checked', false);
         $('#statements').html('\
         <div class="form-row form-group align-items-center">\
             <!-- Option selection -->\
             <div class="col-md-3">\
                 <select class="form-control option-select">\
                     <option value="custom">自定义描述</option>\
-                    <option value="option1">同能力比较</option>\
-                    <option value="option2">不同能力比较</option>\
-                    <option value="option3">能力错配</option>\
-                    <option value="option4">能力范畴比较</option>\
+                    <option value="option1">相同能力</option>\
+                    <option value="option2">不同能力</option>\
+                    <option value="option3">异质能力</option>\
                 </select>\
             </div>\
             <!-- Expression -->\
@@ -274,10 +235,9 @@
             <div class="col-md-3">\
                 <select class="form-control option-select">\
                     <option value="custom">自定义描述</option>\
-                    <option value="option1">同能力比较</option>\
-                    <option value="option2">不同能力比较</option>\
-                    <option value="option3">能力错配</option>\
-                    <option value="option4">能力范畴比较</option>\
+                    <option value="option1">相同能力</option>\
+                    <option value="option2">不同能力</option>\
+                    <option value="option3">异质能力</option>\
                 </select>\
             </div>\
             <!-- Expression -->\
@@ -305,14 +265,14 @@
         }
         else if(option === "option1") {
             // Construct the expression for option 1
-            expressionGroup.append('样例要求的');
+            expressionGroup.append('样例指令要求的');
             expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
             expressionGroup.append('能力')
             expressionGroup.append('<div class="dropdown"><button class="styled-button dropdown-toggle" type="button" data-toggle="dropdown">强于</button><div class="dropdown-menu"><a class="dropdown-item" href="#">强于</a><a class="dropdown-item" href="#">弱于</a><a class="dropdown-item" href="#">接近</a></div></div>');
             expressionGroup.append('当前指令要求')
         }
         else if(option === "option2") {
-            expressionGroup.append('样例要求的');
+            expressionGroup.append('样例指令要求的');
             expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
             expressionGroup.append('能力')
             expressionGroup.append('<div class="dropdown"><button class="styled-button dropdown-toggle" type="button" data-toggle="dropdown">强于</button><div class="dropdown-menu"><a class="dropdown-item" href="#">强于</a><a class="dropdown-item" href="#">弱于</a><a class="dropdown-item" href="#">接近</a></div></div>');
@@ -321,30 +281,12 @@
             expressionGroup.append('能力')
         }
         else if(option === "option3") {
-            var feasibility = $('#feasibility-text').text();
-            if (feasibility == "能够稳定") {
-                expressionGroup.append('当前指令要求的');
-                expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
-                expressionGroup.append('能力在样例中没有要求')
-            } else {
-                expressionGroup.append('样例要求的');
-                expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
-                expressionGroup.append('能力在当前指令中没有要求')
-            }
-        }
-        else if(option === "option4") {
-            var feasibility = $('#feasibility-text').text();
-            if (feasibility == "能够稳定") {
-                // Construct the expression for option 4, with two node selection sections
-                expressionGroup.append('当前指令要求的');
-                expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
-                expressionGroup.append('能力范畴在样例中没有要求')
-            }else{
-                expressionGroup.append('样例要求的');
-                expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
-                expressionGroup.append('能力范畴在当前指令中没有要求')
-            }
-            
+            expressionGroup.append('<div class="dropdown"><button class="styled-button dropdown-toggle" type="button" data-toggle="dropdown">当前指令</button><div class="dropdown-menu"><a class="dropdown-item" href="#">当前指令</a><a class="dropdown-item" href="#">样例指令</a></div></div>');
+            expressionGroup.append('要求的');
+            expressionGroup.append('<span class="select-node styled-button mx-2">xxx</span>');
+            expressionGroup.append('能力在')
+            expressionGroup.append('<p class="ability-change">样例指令<p>')
+            expressionGroup.append('中没有要求')
         }
     });
 
@@ -355,6 +297,12 @@
         var selected_item = $(this).text();
         $(this).parent().prev().text(selected_item);
         // alert('Dropdown item clicked!');
+        if(selected_item === "当前指令"){
+            $(this).parent().parent().parent().find('.ability-change').text("样例指令");
+        }
+        else if(selected_item === "样例指令"){
+            $(this).parent().parent().parent().find('.ability-change').text("当前指令");
+        }
     });
 
     
@@ -366,4 +314,9 @@
     $(document).on('click', '.remove-statement', function() {
         $(this).closest('.form-row').remove();
     });
+
+    $(document).on('click','#start-btn',function(){
+        $('#question-intro').addClass('hide');
+        $('#question-content').removeClass('hide');
+    })
 </script>
