--- a/templates/index.html
+++ b/templates/index.html
@@ -119,8 +119,8 @@
                                     <ul>
                                         <li desc="用户缺省了指令的重要成分">省略信息理解
                                             <ul>
-                                                <li desc="用户缺省了执行方式的指示">不完整方法理解</li>
-                                                <li desc="用户缺省了任务目标">不完整目标理解</li>
+                                                <li desc="用户没有明确执行方式">不完整方法理解</li>
+                                                <li desc="用户没有明确任务目标">不完整目标理解</li>
                                             </ul>
                                         </li>
                                         <li desc="用户对于指令元素的范围、程度等没有明确表达">模糊范围程度理解</li>
@@ -134,12 +134,12 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li desc="用户表达比较随意">口语化表达理解
+                                <li desc="用户使用了日常交流时的口语化表达">口语化表达理解
                                     <ul>
                                         <li desc="用户使用了非陈述的语序">特殊语序理解
                                             <ul>
                                                 <li>倒装语序理解</li>
-                                                <li>疑问语序理解</li>
+                                                <li>疑问语气理解</li>
                                                 <li>祈使语气理解</li>
                                                 <li>虚拟语气理解</li>
                                             </ul>
@@ -150,8 +150,9 @@
                                 </li>
                                 <li desc="正确理解用户意图需要高级智能水平">高级智能理解
                                     <ul>
-                                        <li desc="了解用户当前的情境，比如物理环境、手机和电脑上的任务等">情景感知</li>
+                                        <li desc="了解用户当前的情境，比如物理环境、手机和电脑上的任务等">情境感知</li>
                                         <li desc="对用户个人相关习惯与信息的理解">个性化知识理解</li>
+                                        <li desc="用户没有直接下达指令，而是采取了一些间接表达">语义揣测</li>
                                     </ul>
                                 </li>
                             </ul>
@@ -159,30 +160,35 @@
                         <li desc="根据对指令的理解规划执行步骤">规划
                             <ul>
                                 <li desc="在符合用户设置的条件时触发特定执行过程">设置条件触发</li>
-                                <li desc="根据用户表达构建需要循环执行的过程">构建循环</li>
+                                <li desc="根据用户表达构建需要循环（多次）执行的过程">构建循环</li>
                                 <li desc="从用户表达中提取隐含的执行内容">隐性步骤提取</li>
-                                <li desc="执行过程含有多个任务时可以正确调度">多任务调度</li>
+                                <li desc="执行过程涉及任务切换时">任务调度</li>
                             </ul>
                         </li>
                         <li desc="进行实际的执行并产生效果">执行
                             <ul>
                                 <li desc="完成执行中的某一个操作的能力">操作
                                     <ul>
-                                        <li desc="可以执行基于某个设备（如鼠标、触摸屏、麦克风、机械臂等）的操作">特定执行器件
+                                        <li desc="可以执行基于某个设备（如触摸屏、麦克风、机械臂、智能家居等）的操作">特定执行器件
                                             <ul>
                                                 <li desc="可以执行某种动作（如点击、播放声音等）">特定执行动作</li>
                                             </ul>
                                         </li>
-                                        <li desc="能够在任务困难的情况上正确执行">可靠执行
+                                        <li desc="能够在任务困难的情况下正确执行">可靠执行
                                             <ul>
                                                 <li desc="能够执行过程很长的任务">长任务</li>
                                                 <li desc="能够执行复杂的（比如涉及多个子任务）任务">复杂任务</li>
                                             </ul>
                                         </li>
-                                        <li desc="任务执行涉及其它设备">其它设备协作</li>
+                                        <li desc="能响应涉及某个应用（如微信）的指令">特定应用
+                                            <ul>
+                                                <li desc="能响应应用中某个功能（如朋友圈）的指令">特定应用功能</li>
+                                            </ul>
+                                        </li>
+                                        <li desc="可以完成某种语义操作（如不同软件中的搜索）">特定语义功能</li>
                                     </ul>
                                 </li>
-                                <li desc="对于任务中涉及的信息的掌握">信息
+                                <li desc="任务的完成依赖于对信息的掌握">信息
                                     <ul>
                                         <li desc="获取所需信息的能力">信息获取
                                             <ul>
@@ -194,7 +200,7 @@
                                         <li desc="为了完成指令而对信息进行处理">信息处理
                                             <ul>
                                                 <li desc="对信息进行比较、排序、加和等运算">信息运算</li>
-                                                <li desc="对信息进行分析的能力">信息分析
+                                                <li desc="对信息进行分析、判断、推理">信息分析
                                                     <ul>
                                                         <li desc="判断信息是否符合预设条件">条件判断</li>
                                                         <li desc="判断信息是否会符合用户主观评价">偏好分析</li>
@@ -205,22 +211,13 @@
                                         <li desc="记忆先前信息并进行提取">信息存储与提取</li>
                                     </ul>
                                 </li>
-                                <li desc="在某个领域的能力">领域
-                                    <ul>
-                                        <li desc="擅长涉及某个应用（如微信）的指令">特定应用
-                                            <ul>
-                                                <li desc="擅长涉及应用中某个功能（如朋友圈）的指令">特定应用功能</li>
-                                            </ul>
-                                        </li>
-                                        <li desc="擅长某种语义操作（如搜索）">相似语义功能</li>
-                                    </ul>
-                                </li>
                                 <li desc="拥有智能执行能力">智能
                                     <ul>
-                                        <li desc="如图片识别等">智能识别</li>
-                                        <li>道德与反歧视</li>
-                                        <li desc="需要专业或通用智能能力的执行（如翻译、总结等）">高级任务解决</li>
-                                        <li>创造</li>
+                                        <li desc="如图片识别与理解等">识别与理解</li>
+                                        <li desc="多数人可以做到的事情（无论好坏），如沟通、常识推理">通用</li>
+                                        <li desc="需要专业知识和训练才能做到的事情">专业</li>
+                                        <li desc="进行情感理解、调节">情感</li>
+                                        <li desc="进行创造性地工作">生成</li>
                                     </ul>
                                 </li>
                             </ul>
