--- a/templates/index_1.html
+++ b/templates/index_1.html
@@ -1,7 +1,7 @@
 <!-- Options -->
 <!-- ... -->
 <!-- Options -->
-<div class="card mb-3 hide" id="question-content">
+<div class="card mb-3" id="question-content">
     <div class="card-body">
         <h5 class="card-title example" id="instance">{{question_set["instance"]}}</h5>
         <!-- Statements -->
