designed question generation rules

--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
                                         <li desc="多数人可以做到的事情（无论好坏），如沟通、常识推理">通用</li>
                                         <li desc="需要专业知识和训练才能做到的事情">专业</li>
                                         <li desc="进行情感理解、调节">情感</li>
-                                        <li desc="进行创造性地工作">生成</li>
+                                        <li desc="进行创造性的工作">生成</li>
                                     </ul>
                                 </li>
                             </ul>
