--- a/templates/index_1v1.html
+++ b/templates/index_1v1.html
@@ -1,6 +1,6 @@
 <!-- Question Introduction -->
 <div class="mt-3 mb-3" id="question-intro">
-    <h4 id="question-text">一个AI助手<u><span id="feasibility-text" class="example">{% if question_set["example_feasibility"] %}能够稳定{% else %}不能正确{% endif %}</span></u>响应如下指令<br/>"<span id="example-instance" class="example">{{question_set["example_instance"]}}</span>"，<br/>请评价你因为这个实例对该AI助手响应如下指令的信任度变化和其中原因</h4>
+    <h4 id="question-text">一个AI助手<u><span id="feasibility-text" class="example">{% if question_set["example_feasibility"] %}能够稳定{% else %}不能正确{% endif %}</span></u>响应如下指令<br/>"<span id="example-instance" class="example">{{question_set["example_instance"]}}</span>"，<br/>请评价你因为这个实例对该AI助手响应如下指令的信任度和实例产生的影响</h4>
     <button type="button" class="btn btn-primary btn-block" id="start-btn">我已了解</button>
 </div>
 
