--- a/templates/index.html
+++ b/templates/index.html
@@ -119,8 +119,8 @@
                                     <ul>
                                         <li desc="用户缺省了指令的重要成分">省略信息理解
                                             <ul>
-                                                <li desc="用户没有明确执行方式">不完整方法理解</li>
-                                                <li desc="用户没有明确任务目标">不完整目标理解</li>
+                                                <li desc="用户没有明确执行方式">不确定方法理解</li>
+                                                <li desc="用户没有明确任务目标">不确定目标理解</li>
                                             </ul>
                                         </li>
                                         <li desc="用户对于指令元素的范围、程度等没有明确表达">模糊范围程度理解</li>
@@ -129,23 +129,27 @@
                                                 <li desc="使用“这、那”等定冠词进行指代">定冠词指代理解</li>
                                                 <li desc="使用不常用不标准的称呼或昵称指代">别名理解</li>
                                                 <li desc="缺少能够准确指向实体的修饰和限定">缺失限定语理解</li>
-                                                <li desc="使用不常用的词汇或表达，如方言等">非常规表达理解</li>
+                                                <li desc="使用不常用的词汇或表达，如方言等或口误">非常规表达理解</li>
                                             </ul>
                                         </li>
                                     </ul>
                                 </li>
                                 <li desc="用户使用了日常交流时的口语化表达">口语化表达理解
                                     <ul>
-                                        <li desc="用户使用了非陈述的语序">特殊语序理解
+                                        <li desc="适应用户表达所用的语序和语气">语序语气理解
                                             <ul>
                                                 <li>倒装语序理解</li>
-                                                <li>疑问语气理解</li>
-                                                <li>祈使语气理解</li>
                                                 <li>虚拟语气理解</li>
                                             </ul>
                                         </li>
                                         <li desc="省略了句子的不含任务信息的成分">句子成分缺失理解</li>
                                         <li desc="用户表达了和指令无关的内容">抗冗余表达干扰</li>
+                                    </ul>
+                                </li>
+                                <li desc="用户的指令较为复杂">复杂指令理解
+                                    <ul>
+                                        <li desc="用户的表述包含复杂的逻辑">复杂逻辑理解</li>
+                                        <li desc="用户的表达中包含了很大信息量">大信息量理解</li>
                                     </ul>
                                 </li>
                                 <li desc="正确理解用户意图需要高级智能水平">高级智能理解
