--- a/templates/index_1v1.html
+++ b/templates/index_1v1.html
@@ -13,7 +13,7 @@
         <!-- Statements -->
         <!-- Belief Rating -->
         <div class="belief-rating">
-            <p class="mb-1">你认为该AI助手能否响应该指令:</p>
+            <p class="mb-1">你认为该AI助手能否正确响应该指令:</p>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="beliefRating" id="belief1" value="1">
                 <label class="form-check-label" for="belief1">1(非常悲观)</label>
